# A.R.I.A.

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  aria-setup  aria.sh  docker-compose.managed.yml  docker-compose.public.yml  docker-compose.yml  pyproject.toml
aria/: __main__.py  cli.py  main.py  update_helper.py
config/: config.example.yaml  error_interpreter.yaml  persona.dev.md  secrets.env.example
constraints/: runtime.txt
docker/: aria-host-update.env.example  aria-host-update.sh  aria-pull-shortcut.sh  aria-pull.env.example  aria-stack.env.example  entrypoint.sh  export-local-build.sh  portainer-stack.alpha3.local.yml  portainer-stack.example.yml  portainer-stack.local.yml  portainer-stack.public.yml  pull-from-dev.sh  searxng.settings.yml  setup-compose-stack.sh  update-local-aria.sh
docs/: README.md
project.docu/: README.md  alpha-build-log.md  next-build-batch.md  status-aktuell.md
prompts/: persona.md
samples/: README.md
scripts/: audit_i18n_code_literals.py  create_github_release.py
tests/: test_action_planner.py  test_agentic_action_resolution.py  test_agentic_content_access.py  test_agentic_context_runtime.py  test_agentic_deterministic_boundaries.py  test_agentic_execution.py  test_agentic_free_form_regressions.py  test_agentic_runtime_debug.py  test_app_plan_artifacts.py  test_app_plan_drafting.py  test_app_plan_validation.py  test_app_regression_apply_preview.py  test_app_regression_proposals.py  test_aria_turn_arbitration.py  test_auth_middleware.py  (+133 more)
(+552 files in other folders)
